testsuite/bsc.interra/messages/EBadLexChar/EBadLexChar2.bs.bsc-out.expected
checking package dependencies
Error: "EBadLexChar2.bs", line 26, column 8: (P0002)
  Bad character in input: '\DEL'
